--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     function renderButtons() {
         $("#buttons-view").empty();
 
-        for (var i = 0; < cities.length; i++) {
+        for (var i = 0; i < cities.length; i++) {
 
         var a = $("<button>");
         
