--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Weather</title>
 </head>
@@ -12,7 +11,7 @@
     <div id="buttons view"></div>
     <form id="city-form">
         <label for="city-input">Add City</label>
-        <input type="text"id="city-input">
+        <input type="text" id="city-input">
         <br>
         <input id="add-city" type="submit" value="add city">
     </form>
@@ -62,6 +61,7 @@
         
         cityDiv.append(pFour);
     
+        console.log(reponse);
         });
     }
 
